--- a/Final.html
+++ b/Final.html
@@ -331,9 +331,9 @@
                     <h3 class="toyou">to you!</h3>
                 </div>
                 <div class="wishes">
-                    <p>Dear Ma’am, My Love, ❤️</p>
+                    <p>Dear Suhana, My Love, ❤️</p>
                     <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your wishes come true and your heart always shine with happiness. 💖✨</p>
-                    <p class="name">With love ~ Your Shobhit</p>
+                    <p class="name">With love ~ Your Suryansh</p>
                     <p class="name"></p>
                 </div>
             </div>
