--- a/final.html
+++ b/final.html
@@ -322,7 +322,7 @@
             </div>
             <div class="cardInside">
                 <div class="img">
-                    <img src="suryansh.jpg" alt="Brotherpic" class="bdyboy">
+                    <img src="suhana.jpg" alt="Brotherpic" class="bdyboy">
                     <img src="6ob.gif" alt="confetti" class="confetti">
                 </div>
                 <div class="inside-text">
