--- a/final.html
+++ b/final.html
@@ -307,6 +307,10 @@
 <body>
     <img src="ZUiY.gif" alt="stars" class="star">
     <img src="5l03.gif" alt="ballon" class="ballon">
+    <audio autoplay loop>
+        <source src="bgm.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <div class="container">
         <div class="birthdayCard">
             <div class="cardFront">
