--- a/final.html
+++ b/final.html
@@ -307,7 +307,7 @@
 <body>
     <img src="ZUiY.gif" alt="stars" class="star">
     <img src="5l03.gif" alt="ballon" class="ballon">
-    <audio autoplay loop>
+    <audio id="bg-music" loop>
         <source src="bgm.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
@@ -335,9 +335,9 @@
                     <h3 class="toyou">to you!</h3>
                 </div>
                 <div class="wishes">
-                    <p>Dear Suhana, My Love, ❤️</p>
-                    <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your wishes come true and your heart always shine with happiness. 💖✨</p>
-                    <p class="name">With love ~ Your Suryansh</p>
+                    <p>Hey Suhana, My Vamangi ❤️</p>
+                    <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your wishes come true and your heart always shine with happiness. once a pandit said to my mom that your son will be very lucky and i am damn sure he was talking about You, I hope we will see more years together....💖✨</p>
+                    <p class="name">With love ~ Your's Suryansh</p>
                     <p class="name"></p>
                 </div>
             </div>
@@ -345,7 +345,14 @@
     </div>
     <img src="cat.gif" alt="cat" class="cat">
 
-
+    <script>
+        document.addEventListener("click", function() {
+            let audio = document.getElementById("bg-music");
+            if (audio.paused) {
+                audio.play();
+            }
+        });
+    </script>
     
 </body>
 
