--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@
     </style>
 </head>
 <body>
+<audio id="bg-music" loop>
+    <source src="indexbgm.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<script>
+    document.addEventListener("click", function() {
+        let audio = document.getElementById("bg-music");
+        if (audio.paused) {
+            audio.play();
+        }
+    });
+</script>
 
     <div class="cake-container">
         <div class="cake"></div>
