--- a/cake.html
+++ b/cake.html
@@ -247,6 +247,19 @@
     </style>
 </head>
 <body>
+    <audio id="bg-music" loop>
+    <source src="birth.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<script>
+    document.addEventListener("click", function() {
+        let audio = document.getElementById("bg-music");
+        if (audio.paused) {
+            audio.play();
+        }
+    });
+</script>
     <div class="stars"></div>
     <h1 class="heading">Magical Cake Time! ✨</h1>
     <div class="cake-container">
