--- a/birthday-main.html
+++ b/birthday-main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday My Love by Suryansh Singh</title>
+    <title>Happy Birthday Suhana by Suryansh Singh</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
@@ -256,6 +256,19 @@
     </style>
 </head>
 <body>
+    <audio id="bg-music" loop>
+    <source src="birth.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<script>
+    document.addEventListener("click", function() {
+        let audio = document.getElementById("bg-music");
+        if (audio.paused) {
+            audio.play();
+        }
+    });
+</script>
     <div class="background"></div>
     <canvas id="starCanvas"></canvas>
     <canvas id="petalsCanvas"></canvas>
