--- a/birthday-main.html
+++ b/birthday-main.html
@@ -278,7 +278,7 @@
     <div class="birthday-container">
         <h1 class="birthday-text text-6xl">Happy Birthday, Suhana</h1>
         <p class="romantic-message">Every moment with you is a celebration, but today is especially magical. Here's to another year of love, laughter, and countless beautiful memories together.</p>
-        <button class="celebrate-button" id="celebrateBtn">Celebrate Our Love</button>
+        <button class="celebrate-button" id="celebrateBtn">Celebrate your Birthday</button>
         <button class="next-page-button" id="nextPageBtn">Next</button>
     </div>
 
