--- a/final.html
+++ b/final.html
@@ -336,7 +336,7 @@
                 </div>
                 <div class="wishes">
                     <p>Hey Suhana, My Vamangi ❤️</p>
-                    <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your wishes come true and your heart always shine with happiness. once a pandit said to my mom that your son will be very lucky and i am damn sure he was talking about You, I hope we will see more years together....💖✨</p>
+                    <p>Happy Birthday!! 🎉🥳 I hope your day is filled with endless love and laughter! May all your wishes come true and your heart always shine with happiness. once a pandit told my mom that your son will be very lucky and i am damn sure he was talking about You, I hope we will see more years together....💖✨</p>
                     <p class="name">With love ~ Your's Suryansh</p>
                     <p class="name"></p>
                 </div>
