--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         document.getElementById('submit-btn').addEventListener('click', function(event) {
             event.preventDefault();
             const nameInput = document.getElementById('love-name').value.trim();
-            if (nameInput.toLowerCase() === "suhana") {
+            if (nameInput.toLowerCase() === "h67") {
                 alert("Welcome to the Cake Party! 🎂");
                 window.location.href = "main.html";
             } else {
